# rbm

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  test.cpp  test.py
RigidBodyMotion.xcodeproj/: project.pbxproj
RigidBodyMotion.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RigidBodyMotion.xcodeproj/project.xcworkspace/xcuserdata/cmookj.xcuserdatad/: UserInterfaceState.xcuserstate
RigidBodyMotion.xcodeproj/xcshareddata/xcschemes/: RigidBodyMotionLibrary.xcscheme  TestRigidBodyMotionLibrary.xcscheme
RigidBodyMotion.xcodeproj/xcuserdata/cmookj.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
RigidBodyMotion.xcodeproj/xcuserdata/cmookj.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake/: UpdateSubmodules.cmake
include/rbmlib/: rbm.hpp
python/: test.py
rbm/: CMakeLists.txt
rbm/include/: rbm.hpp
rbm/src/: rbm.cpp
src/: rbm.cpp
test/: CMakeLists.txt  TestRigidBodyMotion.mm  test_rbm.cpp
